[workspace]
members = ["fs"]

[workspace.package]
version = "0.1.0"
authors = ["Maxim Khitrov <mkhitrov@blackrockneuro.com>"]
edition = "2021"
rust-version = "1.66"
license = "MPL-2.0"
publish = false

[package]
name = "burble"
description = "User-mode Bluetooth LE library"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[workspace.dependencies]
num_enum = "0.5.7"
paste = "1.0.11"
serde = { version = "1.0.152", features = ["derive"] }
structbuf = { version = "0" }
strum = { version = "0.24.1", features = ["derive"] }
tracing = "0.1.36"

[dependencies]
bitflags = "1.3.2"
burble-const = { path = "const" }
burble-crypto = { path = "crypto" }
futures-core = "0.3.25"
lazy_static = "1.4.0"
lock_api = { version = "0.4.9", features = ["arc_lock"] }
num_enum.workspace = true
parking_lot = { version = "0.12.1", features = ["arc_lock", "hardware-lock-elision", "send_guard"] }
paste.workspace = true
pin-project = "1.0.12"
rusb = "0.9.1"
serde.workspace = true
smallvec = { version = "1.10.0", features = ["const_generics", "const_new", "union"] }
structbuf.workspace = true
strum.workspace = true
thiserror = "1.0.36"
tokio = { version = "1.21.2", features = ["macros", "parking_lot", "rt", "sync", "time"] }
tokio-util = "0.7.4"
tracing.workspace = true

[dev-dependencies]
anyhow = "1.0.65"
burble-fs = { path = "fs" }
clap = { version = "4.1.3", features = ["derive"] }
matches = "0.1.9"
sscanf = "0.4.0"
tokio = { version = "1.21.2", features = ["io-std", "io-util"] }
tracing-subscriber = "0.3.15"
