[workspace]
members = ["fs"]

[workspace.package]
authors = ["Maxim Khitrov <mkhitrov@blackrockneuro.com>"]
edition = "2021"
rust-version = "1.65"
repository = "https://github.com/BlackrockNeurotech/burble"
license = "MPL-2.0"
keywords = ["ble", "bluetooth", "bluez", "gatt", "l2cap"]
categories = ["api-bindings", "embedded", "hardware-support", "network-programming", "os"]

[package]
name = "burble"
version = "0.1.2"
description = "A cross-platform user-mode Bluetooth LE library"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[workspace.dependencies]
enum-iterator = "1.4.0"
num_enum = "0.5.11"
paste = "1.0.12"
serde = { version = "1.0.154", features = ["derive"] }
structbuf = { version = "0.3.4" }
tracing = "0.1.37"

[dependencies]
bitflags = { version = "2.0.1", features = ["serde"] }
blake3 = "1.3.3"
burble-const = { path = "const", version = "0.1.2" }
burble-crypto = { path = "crypto", version = "0.1.1" }
enum-iterator.workspace = true
futures-core = "0.3.26"
lazy_static = "1.4.0"
num_enum.workspace = true
parking_lot = { version = "0.12.1", features = ["arc_lock", "hardware-lock-elision", "send_guard"] }
paste.workspace = true
pin-project = "1.0.12"
rusb = "0.9.1"
serde.workspace = true
smallvec = { version = "1.10.0", features = ["const_generics", "const_new", "union"] }
structbuf.workspace = true
thiserror = "1.0.39"
tokio = { version = "1.26.0", features = ["macros", "parking_lot", "rt", "sync", "time"] }
tokio-util = "0.7.7"
tracing.workspace = true

[dev-dependencies]
anyhow = "1.0.69"
burble-fs = { path = "fs" }
clap = { version = "4.1.8", features = ["derive"] }
matches = "0.1.10"
sscanf = "0.4.0"
tokio = { version = "1.26.0", features = ["io-std", "io-util"] }
tracing-subscriber = "0.3.16"
