[package]
name = "burble-const"
version = "0.2.0"
description = "Bluetooth LE assigned numbers"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
num_enum.workspace = true
paste.workspace = true
structbuf.workspace = true

[dev-dependencies]
enum-iterator.workspace = true
