[package]
name = "burble-const"
version = "0.2.2"
description = "Bluetooth LE assigned numbers"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
num_enum.workspace = true
paste.workspace = true
structbuf.workspace = true

[dev-dependencies]
enum-iterator.workspace = true

[build-dependencies]
serde.workspace = true
serde_yaml = { version = "0.9.21", optional = true }
ureq = { version = "2.6.2", optional = true }
zip = { version = "0.6.4", optional = true }

[features]
generate = ["dep:serde_yaml", "dep:ureq", "dep:zip"]
