[package]
name = "burble-fs"
description = "Bluetooth LE file system storage backend"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
dirs = "4.0.0"
burble = { path = ".." }
burble-crypto = { path = "../crypto" }
tracing.workspace = true

[dev-dependencies]
tempfile = "3.3.0"
