[package]
name = "burble-fs"
version = "0.2.0"
description = "Bluetooth LE file system storage backend"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
dirs = "4.0.0"
burble = { path = "..", version = "0.2.0" }
serde.workspace = true
serde_json = "1.0.94"
tracing.workspace = true

[dev-dependencies]
tempfile = "3.4.0"
